// See README.txt for information and build instructions.

package tutorial;

option java_package = "com.example.tutorial";
option java_outer_classname = "AddressBookProtos";

import "google/protobuf/descriptor.proto";

extend google.protobuf.MessageOptions {
    optional int32 type_id = 50001;
}

message Person {

  option (type_id) = 1;

  required string name = 1;
  required int32 id = 2;        // Unique ID number for this person.
  optional string email = 3;
  optional int64 age = 5 [default = 666];

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
  	
  	option (type_id) = 2;
  
    required string number = 1;
    optional PhoneType type = 2 [default = HOME];
  }

  repeated PhoneNumber phone = 4;
}

// Our address book file is just one of these.
message AddressBook {
  option (type_id) = 3;
  repeated Person person = 1;
}
